using System.Collections;
using UnityEngine;

public class BossStompingAttack : MonoBehaviour
{
    [Header("Stomping Attack Settings")]
    [SerializeField] private int shootsBeforeStomping = 4; // S·ªë l·∫ßn b·∫Øn tr∆∞·ªõc khi stomping (3-5)
    [SerializeField] private float stompingDamage = 30f; // S√°t th∆∞∆°ng stomping
    [SerializeField] private float stompingRange = 2f; // Ph·∫°m vi g√¢y s√°t th∆∞∆°ng
    [SerializeField] private float flyHeight = 3f; // ƒê·ªô cao bay l√™n
    [SerializeField] private float flySpeed = 8f; // T·ªëc ƒë·ªô bay
    [SerializeField] private float stompingDuration = 1.5f; // Th·ªùi gian th·ª±c hi·ªán stomping
    [SerializeField] private LayerMask playerLayerMask = -1; // Layer c·ªßa player
    
    [Header("Physics Settings")]
    [SerializeField] private bool disableCollisionDuringStomping = true; // T·∫Øt collision khi stomping
    [SerializeField] private bool makePlayerPassThrough = true; // Player c√≥ th·ªÉ ƒëi qua Boss khi stomping
    
    [Header("Animation Triggers")]
    [SerializeField] private string stompingAnimationTrigger = "Stomping";
    [SerializeField] private string shootingAnimationTrigger = "Shooting";
    [SerializeField] private string idleAnimationTrigger = "Idle";
    
    [Header("Debug")]
    [SerializeField] private bool enableDebugGizmos = true;
    
    private Animator animator;
    private BossAttack bossAttack;
    private EnemyMovement enemyMovement;
    private BossAnimationController bossAnimationController;
    
    // Physics components
    private Collider2D bossCollider;
    private Rigidbody2D bossRigidbody;
    
    // Stomping state variables
    private int currentShootCount = 0;
    private bool isStomping = false;
    private bool isFlying = false;
    private Vector3 originalPosition;
    private Vector3 targetStompPosition;
    private Vector3 targetPlayerPosition;
    
    // Tracking variables
    private bool wasShootingLastFrame = false;
    
    private void Start()
    {
        // Get required components
        animator = GetComponent<Animator>();
        bossAttack = GetComponent<BossAttack>();
        enemyMovement = GetComponent<EnemyMovement>();
        bossAnimationController = GetComponent<BossAnimationController>();
        bossCollider = GetComponent<Collider2D>();
        bossRigidbody = GetComponent<Rigidbody2D>();
        
        // Validate components
        if (animator == null)
        {
            Debug.LogError($"Animator component kh√¥ng t√¨m th·∫•y tr√™n {gameObject.name}!");
        }
        else
        {
            // Ki·ªÉm tra xem Animator c√≥ c√°c parameters c·∫ßn thi·∫øt kh√¥ng
            ValidateAnimatorParameters();
        }
        
        if (bossAttack == null)
        {
            Debug.LogError($"BossAttack component kh√¥ng t√¨m th·∫•y tr√™n {gameObject.name}!");
        }
        
        if (enemyMovement == null)
        {
            Debug.LogError($"EnemyMovement component kh√¥ng t√¨m th·∫•y tr√™n {gameObject.name}!");
        }
        
        // Get physics components for collision control
        bossCollider = GetComponent<Collider2D>();
        bossRigidbody = GetComponent<Rigidbody2D>();
        
        if (bossCollider == null)
        {
            Debug.LogWarning($"Collider2D component kh√¥ng t√¨m th·∫•y tr√™n {gameObject.name}! Physics collision control s·∫Ω kh√¥ng ho·∫°t ƒë·ªông.");
        }
        
        originalPosition = transform.position;
    }
    
    private void ValidateAnimatorParameters()
    {
        if (animator == null || animator.runtimeAnimatorController == null)
        {
            Debug.LogWarning("Animator ho·∫∑c Animator Controller ch∆∞a ƒë∆∞·ª£c g√°n!");
            return;
        }
        
        // Ki·ªÉm tra trigger parameters
        bool hasStompingTrigger = false;
        bool hasStompingBool = false;
        
        foreach (var param in animator.parameters)
        {
            if (param.name == stompingAnimationTrigger && param.type == AnimatorControllerParameterType.Trigger)
            {
                hasStompingTrigger = true;
                Debug.Log($"‚úì T√¨m th·∫•y Stomping trigger: {stompingAnimationTrigger}");
            }
            if (param.name == "isStomping" && param.type == AnimatorControllerParameterType.Bool)
            {
                hasStompingBool = true;
                Debug.Log($"‚úì T√¨m th·∫•y isStomping bool parameter");
            }
        }
        
        if (!hasStompingTrigger)
        {
            Debug.LogError($"‚ùå Kh√¥ng t√¨m th·∫•y trigger '{stompingAnimationTrigger}' trong Animator Controller!");
        }
        
        if (!hasStompingBool)
        {
            Debug.LogError($"‚ùå Kh√¥ng t√¨m th·∫•y bool parameter 'isStomping' trong Animator Controller!");
        }
        
        if (hasStompingTrigger && hasStompingBool)
        {
            Debug.Log("‚úì T·∫•t c·∫£ animation parameters ƒë√£ ƒë∆∞·ª£c setup ƒë√∫ng!");
        }
    }
    
    private void Update()
    {
        if (isStomping) return; // Kh√¥ng l√†m g√¨ khi ƒëang stomping
        
        TrackShootingBehavior();
    }
    
    private void TrackShootingBehavior()
    {
        if (bossAttack == null) return;
        
        bool isShootingNow = bossAttack.IsShooting();
        
        // Detect when shooting ends (transition from shooting to not shooting)
        if (wasShootingLastFrame && !isShootingNow)
        {
            currentShootCount++;
            
            // Check if it's time to stomp
            if (currentShootCount >= shootsBeforeStomping)
            {
                TriggerStompingAttack();
                currentShootCount = 0; // Reset counter
            }
        }
        
        wasShootingLastFrame = isShootingNow;
    }
    
    private void TriggerStompingAttack()
    {
        if (isStomping || enemyMovement == null) return;
        
        Transform player = enemyMovement.GetPlayerTransform();
        if (player == null) return;
        
        // X√°c ƒë·ªãnh v·ªã tr√≠ player hi·ªán t·∫°i
        targetPlayerPosition = player.position;
        targetStompPosition = targetPlayerPosition;
        
        StartCoroutine(PerformStompingSequence());
    }
    
    private IEnumerator PerformStompingSequence()
    {
        isStomping = true;
        isFlying = true;
        
        // Disable other boss behaviors during stomping
        DisableBossComponents();
        
        // Phase 1: Fly up to target position
        yield return StartCoroutine(FlyToTarget());
        
        // Phase 2: Perform stomping animation and damage
        yield return StartCoroutine(PerformStomping());
        
        // Phase 3: Return to ground
        yield return StartCoroutine(ReturnToGround());
        
        // Re-enable boss behaviors
        EnableBossComponents();
        
        isStomping = false;
        isFlying = false;
        
        Debug.Log("Boss Stomping attack ho√†n th√†nh!");
    }
    
    private IEnumerator FlyToTarget()
    {
        originalPosition = transform.position;
        Vector3 flyPosition = new Vector3(targetStompPosition.x, targetStompPosition.y + flyHeight, 0);
        
        // T·∫°m th·ªùi kh√¥ng trigger animation ·ªü ƒë√¢y, ch·ªâ set state
        if (animator != null)
        {
            Debug.Log("Boss ƒëang bay l√™n, chu·∫©n b·ªã Stomping...");
            animator.SetBool("isStomping", true);
        }
        
        // Calculate flight time based on distance
        float distance = Vector3.Distance(transform.position, flyPosition);
        float flightTime = distance / flySpeed;
        
        float elapsedTime = 0f;
        Vector3 startPosition = transform.position;
        
        while (elapsedTime < flightTime)
        {
            elapsedTime += Time.deltaTime;
            float progress = elapsedTime / flightTime;
            
            // Smooth curve for flying motion
            progress = Mathf.SmoothStep(0f, 1f, progress);
            
            transform.position = Vector3.Lerp(startPosition, flyPosition, progress);
            yield return null;
        }
        
        transform.position = flyPosition;
        Debug.Log("Boss ƒë√£ bay ƒë·∫øn v·ªã tr√≠ target, chu·∫©n b·ªã ƒë√°p xu·ªëng!");
    }
    
    private IEnumerator PerformStomping()
    {
        // Trigger stomping animation ngay tr∆∞·ªõc khi ƒë√°p xu·ªëng
        if (animator != null)
        {
            Debug.Log($"üéØ TRIGGERING Stomping animation: {stompingAnimationTrigger} - Boss ƒëang ƒë√°p xu·ªëng!");
            animator.SetTrigger(stompingAnimationTrigger);
        }
        else
        {
            Debug.LogError("‚ùå Animator is null! Cannot trigger Stomping animation.");
        }
        
        // Wait for a brief moment at the peak ƒë·ªÉ animation c√≥ th·ªùi gian start
        yield return new WaitForSeconds(0.1f);
        
        // Quick descent to stomp - Boss lao xu·ªëng nhanh
        Vector3 stompPosition = new Vector3(targetStompPosition.x, originalPosition.y, 0);
        float descendTime = 0.3f; // TƒÉng th·ªùi gian ƒë·ªÉ animation c√≥ th·ªÉ ch·∫°y
        float elapsedTime = 0f;
        Vector3 startPosition = transform.position;
        
        Debug.Log($"üîΩ Boss ƒëang lao xu·ªëng t·ª´ {startPosition} ƒë·∫øn {stompPosition}");
        
        while (elapsedTime < descendTime)
        {
            elapsedTime += Time.deltaTime;
            float progress = elapsedTime / descendTime;
            progress = progress * progress; // Accelerate descent
            
            transform.position = Vector3.Lerp(startPosition, stompPosition, progress);
            yield return null;
        }
        
        transform.position = stompPosition;
        Debug.Log("üí• Boss ƒë√£ ƒë√°p xu·ªëng ƒë·∫•t! Checking for damage...");
        
        // Trigger stomp damage
        PerformStompDamage();
        
        // Wait for stomping animation to complete
        yield return new WaitForSeconds(stompingDuration);
        Debug.Log("Stomping animation ho√†n th√†nh!");
    }
    
    private IEnumerator ReturnToGround()
    {
        // Already at ground level, just need to clean up animation
        if (animator != null)
        {
            animator.SetBool("isStomping", false);
            // Reset to idle or shooting state
            animator.SetTrigger(idleAnimationTrigger);
        }
        
        yield return new WaitForSeconds(0.5f);
    }
    
    private void PerformStompDamage()
    {
        if (enemyMovement == null) return;
        
        Transform player = enemyMovement.GetPlayerTransform();
        if (player == null) return;
        
        // Check if player is within stomping range
        float distanceToPlayer = Vector3.Distance(transform.position, player.position);
        
        if (distanceToPlayer <= stompingRange)
        {
            // Deal damage to player
            if (player.TryGetComponent<PlayerHealth>(out var playerHealth))
            {
                playerHealth.TakeDamage((int)stompingDamage);
                Debug.Log($"Boss Stomping g√¢y {stompingDamage} s√°t th∆∞∆°ng cho Player!");
            }
            else if (player.TryGetComponent<IDamageable>(out var damageable))
            {
                damageable.TakeDamage((int)stompingDamage);
                Debug.Log($"Boss Stomping g√¢y {stompingDamage} s√°t th∆∞∆°ng cho Player!");
            }
        }
        else
        {
            Debug.Log($"Player ngo√†i t·∫ßm Stomping (kho·∫£ng c√°ch: {distanceToPlayer:F2})");
        }
        
        // Visual/Audio effects could be added here
        CreateStompEffect();
    }
    
    private void CreateStompEffect()
    {
        // Create visual effect for stomping (can be expanded)
        Debug.Log("Stomp effect t·∫°i v·ªã tr√≠: " + transform.position);
        
        // Here you could instantiate particle effects, screen shake, etc.
        // Example:
        // if (stompEffectPrefab != null)
        // {
        //     Instantiate(stompEffectPrefab, transform.position, Quaternion.identity);
        // }
    }
    
    private void DisableBossComponents()
    {
        // Disable movement and normal attack behavior
        if (bossAttack != null)
        {
            bossAttack.enabled = false;
        }
        
        if (bossAnimationController != null)
        {
            bossAnimationController.enabled = false;
        }
        
        // Optionally disable movement
        if (enemyMovement != null)
        {
            enemyMovement.enabled = false;
        }
        
        // Disable collision if enabled
        if (disableCollisionDuringStomping)
        {
            DisableBossPhysics();
        }
    }
    
    private void EnableBossComponents()
    {
        // Re-enable movement and normal attack behavior
        if (bossAttack != null)
        {
            bossAttack.enabled = true;
        }
        
        if (bossAnimationController != null)
        {
            bossAnimationController.enabled = true;
        }
        
        if (enemyMovement != null)
        {
            enemyMovement.enabled = true;
        }
        
        // Re-enable collision
        if (disableCollisionDuringStomping)
        {
            EnableBossPhysics();
        }
    }
    
    private void DisableBossPhysics()
    {
        if (bossCollider != null)
        {
            bossCollider.isTrigger = true; // Make Boss pass-through
            Debug.Log("üîÑ Boss collision disabled - Player c√≥ th·ªÉ ƒëi qua Boss");
        }
        
        if (makePlayerPassThrough && enemyMovement != null)
        {
            Transform player = enemyMovement.GetPlayerTransform();
            if (player != null)
            {
                // Disable collision between Boss and Player
                Collider2D playerCollider = player.GetComponent<Collider2D>();
                if (playerCollider != null && bossCollider != null)
                {
                    Physics2D.IgnoreCollision(bossCollider, playerCollider, true);
                    Debug.Log("üîÑ Boss-Player collision ignored during stomping");
                }
            }
        }
    }
    
    private void EnableBossPhysics()
    {
        if (bossCollider != null)
        {
            bossCollider.isTrigger = false; // Restore normal collision
            Debug.Log("üîÑ Boss collision enabled - Tr·ªü l·∫°i collision b√¨nh th∆∞·ªùng");
        }
        
        if (makePlayerPassThrough && enemyMovement != null)
        {
            Transform player = enemyMovement.GetPlayerTransform();
            if (player != null)
            {
                // Re-enable collision between Boss and Player
                Collider2D playerCollider = player.GetComponent<Collider2D>();
                if (playerCollider != null && bossCollider != null)
                {
                    Physics2D.IgnoreCollision(bossCollider, playerCollider, false);
                    Debug.Log("üîÑ Boss-Player collision restored");
                }
            }
        }
    }
    
    // Public methods for external access
    public bool IsStomping()
    {
        return isStomping;
    }
    
    public bool IsFlying()
    {
        return isFlying;
    }
    
    public void ResetShootCount()
    {
        currentShootCount = 0;
    }
    
    public void ForceStompingAttack()
    {
        if (!isStomping)
        {
            TriggerStompingAttack();
        }
    }
    
    // Debug methods for testing
    [System.Diagnostics.Conditional("UNITY_EDITOR")]
    public void TestAnimationOnly()
    {
        if (animator != null)
        {
            Debug.Log("üé≠ Testing Stomping animation only (no movement)");
            Debug.Log($"Animation trigger: {stompingAnimationTrigger}");
            
            // Test trigger
            animator.SetTrigger(stompingAnimationTrigger);
            animator.SetBool("isStomping", true);
            
            // Reset after 2 seconds
            StartCoroutine(ResetAnimationAfterDelay(2f));
        }
        else
        {
            Debug.LogError("‚ùå Animator is null! Cannot test animation.");
        }
    }
    
    private IEnumerator ResetAnimationAfterDelay(float delay)
    {
        yield return new WaitForSeconds(delay);
        if (animator != null)
        {
            animator.SetBool("isStomping", false);
            animator.SetTrigger(idleAnimationTrigger);
            Debug.Log("Animation test completed, reset to idle");
        }
    }
    
    // Debug visualization
    private void OnDrawGizmosSelected()
    {
        if (!enableDebugGizmos) return;
        
        // Draw stomping range - M√†u ƒë·ªè cho ph·∫°m vi g√¢y s√°t th∆∞∆°ng
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, stompingRange);
        
        // Draw fly height - M√†u xanh lam cho ƒë·ªô cao bay
        Gizmos.color = Color.blue;
        Gizmos.DrawWireCube(transform.position + Vector3.up * flyHeight, Vector3.one * 0.3f);
        
        // Draw target position if stomping - M√†u v√†ng cho v·ªã tr√≠ target
        if (isStomping)
        {
            Gizmos.color = Color.yellow;
            Gizmos.DrawWireSphere(targetStompPosition, 0.5f);
            
            // Draw flight path - M√†u xanh l√° cho ƒë∆∞·ªùng bay
            Gizmos.color = Color.green;
            Vector3 flyPos = new Vector3(targetStompPosition.x, targetStompPosition.y + flyHeight, 0);
            Gizmos.DrawLine(transform.position, flyPos);
            Gizmos.DrawLine(flyPos, targetStompPosition);
        }
        
        // Draw shoot count indicator - M√†u tr·∫Øng cho ch·ªâ s·ªë b·∫Øn
        if (Application.isPlaying)
        {
            Gizmos.color = Color.white;
            Vector3 textPos = transform.position + Vector3.up * 2f;
            // In a real scenario, you might use UnityEditor.Handles for text
            for (int i = 0; i < currentShootCount; i++)
            {
                Gizmos.DrawWireCube(textPos + Vector3.right * (i * 0.3f), Vector3.one * 0.1f);
            }
        }
    }
}
